# dart-ark-wallet

./: LICENSE  README.md  flutter_rust_bridge.yaml  makefile  pubspec.yaml
.github/workflows/: integration-test.yml  precompiled-binaries.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
cargokit/build_tool/lib/src/: android_environment.dart
example/: .flutter-plugins  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/ark_wallet_example/: MainActivity.kt
example/integration_test/: basic_test.dart  simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  send_page.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: ark_wallet.podspec
lib/: ark_wallet.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
lib/src/rust/ark/: address.dart  addresses.dart  balance.dart  client.dart  esplora.dart  send.dart  server_info.dart  settle.dart  storage.dart  transactions.dart  transactions.freezed.dart  unilateral_exit.dart  utils.dart
linux/: CMakeLists.txt
macos/: ark_wallet.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/ark/: address.rs  addresses.rs  balance.rs  client.rs  esplora.rs  mod.rs  send.rs  server_info.rs  settle.rs  transactions.rs  unilateral_exit.rs  utils.rs
windows/: CMakeLists.txt
