[package]
name = "ark_wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.11.1", features = ["anyhow"] }
anyhow = "1"
ark-bdk-wallet = { git = "https://github.com/ArkLabsHQ/ark-rs.git", rev = "3717287" }
ark-core = { git = "https://github.com/ArkLabsHQ/ark-rs.git", rev = "3717287" }
ark-client = { git = "https://github.com/ArkLabsHQ/ark-rs.git", rev = "3717287", default-features = false, features = ["tls-webpki-roots"] }
bitcoin = { version = "0.32.4", features = ["rand"] }
esplora-client = { version = "0.11.0", features = ["async-https-native"] }
nostr = { version = "0.40.0", default-features = false, features = ["std"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
