[package]
name = "ark_wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.9.0", features = ["anyhow"] }
anyhow = "1"
ark-bdk-wallet = { git = "https://github.com/ArkLabsHQ/ark-rs.git", rev = "f64b45" }
ark-core = { git = "https://github.com/ArkLabsHQ/ark-rs.git", rev = "f64b45" }
ark-client = { git = "https://github.com/ArkLabsHQ/ark-rs.git", rev = "f64b45", default-features = false, features = ["tls-webpki-roots"] }
bitcoin = { version = "0.32.4" }
esplora-client = { version = "0.11.0", features = ["async-https-native"] }
rand = "0.8.5"
openssl = { version = "0.10", features = ["vendored"] } 
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde_json = "1.0.145"
hex = "0.4.3"

[dev-dependencies]
hex = "0.4.3"
tokio = { version = "1.0", features = ["full"] }
bip39 = "2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
